--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Mykola SOlonko Project</title>
+    <title>Mykola Solonko Project</title>
     <style>
         body {
             background-color: white;
@@ -14,7 +14,7 @@
     </style>
 </head>
 <body>
-    <h2>Cvičenia Informatika MLD_BOvLD_Bc_sk Mykola Solonko</h2>
+    <h2>Cvičenia Informatika MLD_Bc_sk Mykola Solonko</h2>
     <a href="Mykola_Solonko_web_cv6.html">1. Mykola_Solonko_web_cv6.html (Cvičenie 6, uloha 2)</a>
     <br>
     <a href="Mykola_Solonko_prezencna_listina.html">2. Mykola_Solonko_prezencna_listina.html (Cvičenie 7, uloha 2)</a>
