--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <br>
     <a href="Mykola_Solonko_prezencna_listina.html">2. Mykola_Solonko_prezencna_listina.html (Cvičenie 7, uloha 2)</a>
     <br>
-    <a href="#">3. COMING SOON</a>
+    <a href="Mykola_Solonko_Vrtuľníky_MI.html">3. Mykola Solonko: Vrtuľníky MI (Cvičenie 7, uloha 3)</a>
     <br>
     <a href="#">4. COMING SOON</a>
     <br>
