Mykola_Solonko_Vrtuľníky_MI.html

--- a/Mykola_Solonko_Vrtuľníky_MI.html
+++ b/Mykola_Solonko_Vrtuľníky_MI.html
@@ -1,37 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Моя веб-страница с изображениями</title>
-    <style>
-        .image-row {
-            display: flex;
-            justify-content: center;
-        }
-
-        .image-container {
-            margin: 10px;
-            text-align: center;
-        }
-    </style>
+    <title>Cvičenie 7 uloha 3</title>
 </head>
 <body>
-    <div class="image-row">
-        <div class="image-container">
+    <div style="display: flex; justify-content: center;">
+        <div style="text-align: center; margin: 10px;">
             <img src="mi-8.jpg" alt="mi-8">
             <p>MI-8</p>
         </div>
-        <div class="image-container">
+        <div style="text-align: center; margin: 10px;"
             <img src="mi-2.jpg" alt="mi-2">
             <p>MI-2</p>
         </div>
     </div>
     
-    <div class="image-row">
-        <div class="image-container">
+    <div style="display: flex; justify-content: center;">
+        <div style="text-align: center; margin: 10px;">
             <img src="mi-24.jpg" alt="mi-24">
             <p>MI-24</p>
         </div>
-        <div class="image-container">
+        <div style="text-align: center; margin: 10px;"
             <img src="mi-17.jpg" alt="mi-17">
             <p>MI-17</p>
         </div>
