Mykola_Solonko_Vrtuľníky_MI.html

--- a/Mykola_Solonko_Vrtuľníky_MI.html
+++ b/Mykola_Solonko_Vrtuľníky_MI.html
@@ -6,22 +6,22 @@
 <body>
     <div style="display: flex; justify-content: center;">
         <div style="text-align: center; margin: 10px;">
-            <img src="mi-8.jpg" alt="mi-8">
+            <img src="mi-8.jpg" alt="mi-8" width="200" height="200">
             <p>MI-8</p>
         </div>
         <div style="text-align: center; margin: 10px;"
-            <img src="mi-2.jpg" alt="mi-2">
+            <img src="mi-2.jpg" alt="mi-2" width="200" height="200">
             <p>MI-2</p>
         </div>
     </div>
     
     <div style="display: flex; justify-content: center;">
         <div style="text-align: center; margin: 10px;">
-            <img src="mi-24.jpg" alt="mi-24">
+            <img src="mi-24.jpg" alt="mi-24" width="200" height="200">
             <p>MI-24</p>
         </div>
         <div style="text-align: center; margin: 10px;"
-            <img src="mi-17.jpg" alt="mi-17">
+            <img src="mi-17.jpg" alt="mi-17" width="200" height="200">
             <p>MI-17</p>
         </div>
     </div>
