--- a/Mykola_Solonko_Vrtuľníky_MI.html
+++ b/Mykola_Solonko_Vrtuľníky_MI.html
@@ -6,23 +6,23 @@
 <body>
     <div style="display: flex; justify-content: center;">
         <div style="text-align: center; margin: 10px;">
-            <img src="mi-8.jpg" alt="mi-8" width="200" height="200">
             <p>MI-8</p>
+            <img src="mi-8.jpg" alt="mi-8"; width="200" height="200">
         </div>
         <div style="text-align: center; margin: 10px;"
-            <img src="mi-2.jpg" alt="mi-2" width="200" height="200">
             <p>MI-2</p>
+            <img src="mi-2.jpg" alt="mi-2"; width="200" height="200">
         </div>
     </div>
     
     <div style="display: flex; justify-content: center;">
         <div style="text-align: center; margin: 10px;">
-            <img src="mi-24.jpg" alt="mi-24" width="200" height="200">
             <p>MI-24</p>
+            <img src="mi-24.jpg" alt="mi-24"; width="200" height="200">
         </div>
         <div style="text-align: center; margin: 10px;"
-            <img src="mi-17.jpg" alt="mi-17" width="200" height="200">
             <p>MI-17</p>
+            <img src="mi-17.jpg" alt="mi-17"; width="200" height="200">
         </div>
     </div>
 </body>
