Mykola_Solonko_prezencna_listina.html

--- a/Mykola_Solonko_prezencna_listina.html
+++ b/Mykola_Solonko_prezencna_listina.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
     </head>
     <body>
-<h2 align="center">Prezenčná listina</h2>
+<h2 align="center">P&nbsp;r&nbsp;e&nbsp;z&nbsp;e&nbsp;n&nbsp;č&nbsp;n&nbsp;á&nbsp;&nbsp;&nbsp; l&nbsp;i&nbsp;s&nbsp;t&nbsp;i&nbsp;n&nbsp;a&nbsp;</h2>
 <table align="center" border="1"> 
 <tr>
             <td width="25" height="25" align="center" colspan="2"> 
