--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     <br>
     <a href="Mykola_Solonko_Vrtuľníky_MI.html">3. Mykola Solonko: Vrtuľníky MI (Cvičenie 7, uloha 3)</a>
     <br>
-    <a href="#">4. COMING SOON</a>
+    <a href="Mykola_Solonko_karta.html">4. Mykola_Solonko_karta.html (Cvičenir 7, uloha 4)</a>
     <br>
-    <a href="#">5. COMING SOON</a>
+    <a href="#">5. Coming Soon</a>
     <br>
     <br>
     <br>
