--- a/index.html
+++ b/index.html
@@ -15,15 +15,16 @@
 </head>
 <body>
     <h2>Cvičenia Informatika MLD_Bc_sk Mykola Solonko</h2>
-    <a href="Mykola_Solonko_web_cv6.html">1. Mykola_Solonko_web_cv6.html (Cvičenie 6, uloha 2)</a>
+    <a href="Cvičenie 3.drawio">1. Algoritmus 1 (Cvičenie 3)</a>
     <br>
-    <a href="Mykola_Solonko_prezencna_listina.html">2. Mykola_Solonko_prezencna_listina.html (Cvičenie 7, uloha 2)</a>
+    <a href="Mykola_Solonko_web_cv6.html">2. Mykola_Solonko_web_cv6.html (Cvičenie 6, uloha 2)</a>
     <br>
-    <a href="Mykola_Solonko_Vrtuľníky_MI.html">3. Mykola Solonko: Vrtuľníky MI (Cvičenie 7, uloha 3)</a>
+    <a href="Mykola_Solonko_prezencna_listina.html">3. Mykola_Solonko_prezencna_listina.html (Cvičenie 7, uloha 2)</a>
     <br>
-    <a href="Mykola_Solonko_karta.html">4. Mykola_Solonko_karta.html (Cvičenir 7, uloha 4)</a>
+    <a href="Mykola_Solonko_Vrtuľníky_MI.html">4. Mykola Solonko: Vrtuľníky MI (Cvičenie 7, uloha 3)</a>
     <br>
-    <a href="#">5. Coming Soon</a>
+    <a href="Mykola_Solonko_karta.html">5. Mykola_Solonko_karta.html (Cvičenir 7, uloha 4)</a>
+    <br>
     <br>
     <br>
     <br>
