--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         body {
             background-color: white;
             text-align: center;
+            font-style: italic;
         }
         h1 {
             font-weight: bold;
@@ -17,15 +18,17 @@
     <h2>Cvičenia Informatika MLD_Bc_sk Mykola Solonko</h2>
     <a href="Cvičenie 3.drawio">1. Algoritmus 1 (Cvičenie 3)</a>
     <br>
+    <br>
     <a href="Mykola_Solonko_web_cv6.html">2. Mykola_Solonko_web_cv6.html (Cvičenie 6, uloha 2)</a>
+    <br>
     <br>
     <a href="Mykola_Solonko_prezencna_listina.html">3. Mykola_Solonko_prezencna_listina.html (Cvičenie 7, uloha 2)</a>
     <br>
+    <br>
     <a href="Mykola_Solonko_Vrtuľníky_MI.html">4. Mykola Solonko: Vrtuľníky MI (Cvičenie 7, uloha 3)</a>
     <br>
+    <br>
     <a href="Mykola_Solonko_karta.html">5. Mykola_Solonko_karta.html (Cvičenir 7, uloha 4)</a>
-    <br>
-    <br>
     <br>
     <br>
     <br>
