--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Mykola Solonko Project</title>
     <style>
         body {
-            background-color: "#E6E6FA";
+            background-color: blueviolet;
             text-align: center;
             font-style: italic;
         }
