--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </style>
 </head>
 <body>
-    <h2>Cvičenia Informatika MLD_Bc_sk Mykola Solonko</h2>
+    <h2>Cvičenia Informatika MLD_MvLD_Bc_D_sk Mykola Solonko</h2>
     <br>
     <a href="Cvičenie 3.drawio">1. Algoritmus 1 (Cvičenie 3)</a>
     <br>
