--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <h2>Cvičenia Informatika MLD_MvLD_Bc_D_sk Mykola Solonko</h2>
     <br>
-    <a href="Cvičenie 3.drawio">1. Algoritmus 1 (Cvičenie 3)</a>
+    <a href="ASCACA.drawio.html">1. Algoritmus 1 (Cvičenie 3)</a>
     <br>
     <br>
     <a href="Mykola_Solonko_web_cv6.html">2. Mykola_Solonko_web_cv6.html (Cvičenie 6, uloha 2)</a>
