--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <a href="Mykola_Solonko_karta.html">5. Mykola_Solonko_karta.html (Cvičenir 7, uloha 4)</a>
     <br>
     <br>
+    <a href="Mykola Solonko: Formulár.html">6. Mykola Solonko: Formulár.html (Cvičenir 9, uloha 3)</a>
     <br>
     <br>
     <br>
