--- a/Mykola_Solonko_karta.html
+++ b/Mykola_Solonko_karta.html
@@ -15,16 +15,16 @@
                 
 <table style="width: 100%;">
     <tr>
-        <td><b>Name</b></td><td> John Doe</td>
+        <td><b>Name</b></td><td>Vasyl Pertik</td>
     </tr>
     <tr>
-        <td><b>Age</b></td><td>38 years</td>
+        <td><b>Age</b></td><td>42 years</td>
     </tr>
     <tr>
-        <td><b>Location</b></td><td>Rome, Italy</td>
+        <td><b>Location</b></td><td>Poltava, Uktaina</td>
     </tr>
     <tr>
-        <td><b>Experience</b></td><td>15 years</td>
+        <td><b>Experience</b></td><td>6 years</td>
     </tr>
     <tr>
         <td><b>Degree</b></td><td>MBA</td>
@@ -35,31 +35,32 @@
             <h2 style="border-bottom: 1px solid black;">ABOUTE ME</h2>
                 <table style="width: 100%;">
     <tr>
-        <td><b>Name</b></td><td>John Doe</td><td><b>Age</b></td><td>38 years</td>
+        <td><b>Name</b></td><td>Vasyl Pertik</td>
+        <td><b>Age</b></td><td>42 years</td>
     </tr>
     <tr>
-        <td><b>Location</b></td><td>Rome, Italy</td>
-        <td><b>Experience</b></td><td>15 years</td>
+        <td><b>Location</b></td><td>Poltava, Uktaina</td>
+        <td><b>Experience</b></td><td>6 years</td>
     </tr>
     <tr>
-        <td><b>Degree</b></td><td>MBA</td><td><b>Carerr level</b></td><td>Mid-level</td>
+        <td><b>Degree</b></td><td>MBA</td>
+        <td><b>Carerr level</b></td><td>High level</td>
     </tr>
     <tr>
-        <td><b>Phone</b></td><td>(800)123-4567</td>
-        <td><b>Fax</b></td><td>(800)123-4568</td>
+        <td><b>Phone</b></td><td>+421 910 910 116</td>
+        <td><b>Fax</b></td><td>+421 910 910 116</td>
     </tr>
     <tr>
         <td><b>E-mail</b></td>
-        <td><font color="#00FFFF">example@example.com</font></td>
+        <td><font color="#00FFFF">mykola.solonko@student.tuke.sk</font></td>
         <td><b>Website</b></td>
-        <td><font color="#00FFFF">example.com</font></td>
+        <td><font color="#00FFFF">https://flyerbe-n.github.io/informatika2023/</font></td>
     </tr>
 </table>
         <a href=""></a>
-            <h2 style="border-bottom: 1px solid black;">I'M WEB DESIGNER</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin nibh augue, suscipit a, scelerisque
-                    sed, lacinia in, mi. Cras vel lorem. Etiam pellentesque aliquet tellus. Phasellus pharetra nulla ac
-                    diam.
+            <h2 style="border-bottom: 1px solid black;">I'M A COMPUTER PROGRAMMER</h2>
+                <p>I am well versed in HTML, CSS, Python, C++ and Java Script. I’ve been interested in all this since childhood, 
+                    I can make you any code you need quickly and efficiently.
                 </p>
 </body>
 </html>
