--- a/Mykola_Solonko_karta.html
+++ b/Mykola_Solonko_karta.html
@@ -47,8 +47,8 @@
         <td><b>Carerr level</b></td><td>High level</td>
     </tr>
     <tr>
-        <td><b>Phone</b></td><td>+421 910 910 116</td>
-        <td><b>Fax</b></td><td>+421 910 910 116</td>
+        <td><b>Phone</b></td><td>+380638110470</td>
+        <td><b>Fax</b></td><td>+380638110470</td>
     </tr>
     <tr>
         <td><b>E-mail</b></td>
