--- a/Mykola_Solonko_web_cv6.html
+++ b/Mykola_Solonko_web_cv6.html
@@ -79,7 +79,7 @@
     </p>
     <h3>
         <b>
-            <article id="#Verzie">
+            <article id="Verzie">
             Verzie
         </article>
         </b>
@@ -157,7 +157,7 @@
         </ol>
     <h3>
         <font color="fuchsia" >
-            <article id="#Zaujímavosti">
+            <article id="Zaujímavosti">
             <b>Zaujímavosti</b>
         </font>
     </article>
@@ -171,7 +171,7 @@
     </ol>
     <h3>
         <font color="fuchsia">
-            <article id="#Referencie">
+            <article id="Referencie">
                 Referencie
         </font>
     </h3>
