--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
     <br>
     <br>
     <br>
-    <br>
-    <br>
+    <h2>Moja webova prezentacia</h2>
+    <a href="http://ilovekanye.atwebpages.com/index.html">CLICK HERE</a>
     <br>
     <br>
     <br>
